rendered/envs/alpha/karma/deployment-karma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  labels:
    app.kubernetes.io/name: karma
  name: karma
  namespace: karma
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: karma
  template:
    metadata:
      labels:
        app.kubernetes.io/name: karma
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: CONFIG_FILE
              value: /etc/karma/karma.yaml
          image: oci.zebradil.dev/ghcr.io-cache/prymitive/karma@sha256:98d9ed60911811f936a143177fc34642e30cf9579e073c28b6416a28dff17724
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          name: karma
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 2000
          volumeMounts:
            - mountPath: /etc/karma
              name: config
      volumes:
        - configMap:
            name: config
          name: config
