rendered/envs/alpha/karma/ingressroute-karma-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: karma-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`karma.lan.zebradil.dev`) || Host(`karma.junior.lan.zebradil.dev`) || Host(`karma.zebradil.dev`) || Host(`karma.junior.zebradil.dev`)
      services:
        - name: karma
          port: http
