rendered/envs/alpha/karma/ingressroute-karma-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: karma-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`karma.ts.zebradil.dev`) || Host(`karma.junior.ts.zebradil.dev`)
      services:
        - name: karma
          port: http
